@@ -17,6 +17,7 @@ import java.io.FileOutputStream;
 import java.io.FileReader;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -137,7 +138,7 @@ public class Recognizer {
 
         // Download fallback
         try {
-            URL url = new URL(remote);
+            URL url = URI.create(remote).toURL();
             HttpURLConnection c = (HttpURLConnection) url.openConnection();
             c.setConnectTimeout(5000);
             c.setReadTimeout(30000);
